GNOME Bugzilla – Bug 696553
Crash in avahi_create_browsers
Last modified: 2013-03-25 14:00:12 UTC
Created attachment 239754 [details] [review] Patch In avahi_request_printer_list() a new connection to the DBus system bus is started synchrounously, but it's not cancellable and it's not taking any reference of the GtkPrintBackendCups. This means that when the callback is called, the object might have been destroyed already. (lt-WebKitWebProcess:9813): GLib-GObject-WARNING **: invalid uninstantiatable type `(null)' in cast to `GtkPrintBackendCups'
+ Trace 231680
The patch looks good. I'll wait for the actualized version you've told me about.
Created attachment 239763 [details] [review] Updated patch Fixed other callbacks that might be called after the cup backend has been destroyed.
Review of attachment 239763 [details] [review]: Thank you very much for catching also this problem. The patch looks good. Could I ask you a favor? Could you change the g_debug() there to g_warning()? I intended to use g_warning() but somehow used g_debug().
(In reply to comment #3) > Review of attachment 239763 [details] [review]: > > Thank you very much for catching also this problem. The patch looks good. > Could I ask you a favor? Could you change the g_debug() there to g_warning()? I > intended to use g_warning() but somehow used g_debug(). Sure!
Thank you :)
Comment on attachment 239763 [details] [review] Updated patch Pushed to both branches.